--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "bolt": {
     "workspaces": [
       "packages/utils",
+      "packages/native",
       "packages/css-packs/*"
     ]
   },
@@ -16,12 +17,12 @@
     "build": "bolt ws build",
     "delete:modules": "rm -rf 'node_modules' './**/node_modules'",
     "lint": "npm run lint:js; npm run lint:css",
-    "lint:js": "eslint '*.js' '{tools,packages/*/*/src}/**/*.{js,jsx}'",
-    "lint:css": "stylelint '{tools,packages/*/*/src}/**/*.{css,scss,sass,sss,less}'",
+    "lint:js": "eslint '*.js' 'tools/**/*.js' 'packages/**/*.js'",
+    "lint:css": "stylelint 'packages/**/*.{css,scss}'",
     "format": "npm run format:css; npm run format:js",
-    "format:js": "prettier --write '*.js' '{tools,packages/*/*/src}/**/*.{js,jsx}' && eslint --fix '*.js' '{tools,packages/*/*/src}/**/*.{js,jsx}'",
-    "format:css": "prettier --write '{tools,packages/*/*/src}/**/*.{css,scss,sass,sss,less}' && stylelint --fix '{tools,packages/*/*/src}/**/*.{css,scss,sass,sss,less}'",
-    "test": "echo 'Test not yet implemented';"
+    "format:js": "prettier --write '*.js' 'tools/**/*.js' 'packages/**/*.js' && eslint --fix '*.js' 'tools/**/*.js' 'packages/**/*.js'",
+    "format:css": "prettier --write 'packages/**/*.{css,scss}' && stylelint --fix 'packages/**/*.{css,scss}'",
+    "test": "jest"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@babel/preset-stage-0": "^7.0.0-beta.44",
     "autoprefixer": "^8.2.0",
     "babel-core": "^7.0.0-0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "clean-webpack-plugin": "^0.1.19",
@@ -43,6 +45,7 @@
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
@@ -51,6 +54,7 @@
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.3",
     "lint-staged": "^7.0.2",
     "mini-css-extract-plugin": "^0.4.0",
     "ncp": "^2.0.0",
