--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Native Mamba applications methods",
   "main": "dist/main.js",
-  "source": "src/index.js",
+  "source": "index.js",
   "scripts": {
     "watch": "cross-env NODE_ENV=development webpack --config ../../tools/webpack/config.dev.js --watch",
     "build": "cross-env NODE_ENV=production webpack --config ../../tools/webpack/config.build.js",
