--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production node build",
     "build:dev": "cross-env NODE_ENV=development node build",
     "build:analyze": "cross-env NODE_ENV=production webpack --config ../../tools/webpack/config.analyzer.js",
-    "test": "jest --config='../../jest.config.js'"
+    "test": "jest --config='../../jest.config.js'",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
