--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^1.1.11",
+    "glob": "^7.1.2",
+    "globby": "^8.0.1",
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
