--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -4,12 +4,17 @@
   "description": "Native Mamba applications methods",
   "main": "native.js",
   "source": "src/index.js",
+  "subModules": ["src/*/index.js", "!src/utils"],
   "files": ["./*.js"],
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack --config ../../tools/webpack/config.dev.js --watch",
-    "build": "cross-env NODE_ENV=production node build",
-    "build:dev": "cross-env NODE_ENV=development node build",
-    "build:analyze": "cross-env NODE_ENV=production webpack --config ../../tools/webpack/config.analyzer.js",
+    "watch":
+      "cross-env NODE_ENV=development webpack --config ../../tools/webpack/config.dev.js --watch",
+    "build":
+      "cross-env NODE_ENV=production node ../../tools/scripts/build-modularized",
+    "build:dev":
+      "cross-env NODE_ENV=development node ../../tools/scripts/build-modularized",
+    "build:analyze":
+      "cross-env NODE_ENV=production webpack --config ../../tools/webpack/config.analyzer.js",
     "test": "jest --config='../../jest.config.js'",
     "prepublishOnly": "npm run build"
   },
