--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,18 +3,14 @@
   "version": "0.0.1",
   "description": "Collection of web utilities for Mamba Applications",
   "main": "utils.js",
+  "module": "utils.esm.js",
   "source": "src/index.js",
-  "subModdules": ["src/*/index.js"],
+  "subModules": ["src/*/index.js"],
   "files": ["./*.js"],
   "scripts": {
-    "watch":
-      "cross-env NODE_ENV=development webpack --config ../../tools/webpack/config.dev.js --watch",
+    "watch": "rollup -c ../../tools/rollup/config.lib.js -w",
     "build":
-      "cross-env NODE_ENV=production node ../../tools/scripts/build-modularized",
-    "build:dev":
-      "cross-env NODE_ENV=development node ../../tools/scripts/build-modularized",
-    "build:analyze":
-      "cross-env NODE_ENV=production webpack --config ../../tools/webpack/config.analyzer.js",
+      "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
     "test": "jest --config='../../jest.config.js'",
     "prepublishOnly": "npm run build"
   },
