--- a/package.json
+++ b/package.json
@@ -25,67 +25,67 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/node": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/preset-stage-0": "^7.0.0-beta.44",
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^7.0.0-0",
+    "@babel/cli": "^7.0.0-beta.46",
+    "@babel/core": "7.0.0-beta.46",
+    "@babel/node": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-stage-3": "^7.0.0-beta.46",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
-    "babel-loader": "^8.0.0-beta",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
-    "eslint": "^4.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
     "glob": "^7.1.2",
     "globby": "^8.0.1",
-    "html-webpack-plugin": "^3.0.7",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "lint-staged": "^7.0.2",
+    "lint-staged": "^7.0.5",
     "mini-css-extract-plugin": "^0.4.0",
     "ncp": "^2.0.0",
-    "node-sass": "^4.7.2",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.3",
+    "postcss-loader": "^2.1.4",
     "postcss-reporter": "^5.0.0",
-    "prettier": "^1.11.1",
+    "prettier": "^1.12.1",
     "prop-types": "^15.6.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
-    "rollup-plugin-babel": "^4.0.0-beta.4",
-    "rollup-plugin-commonjs": "^9.1.2",
+    "rollup-plugin-babel": "^4.0.0-beta.2",
+    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-filesize": "^1.5.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "stylelint": "^9.1.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
-    "stylelint-scss": "^3.0.0",
-    "stylelint-webpack-plugin": "^0.10.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "stylelint-scss": "^3.1.0",
+    "stylelint-webpack-plugin": "^0.10.4",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "validate-npm-package-name": "^3.0.0",
-    "webpack": "^4.5.0",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^2.1.2",
     "webpack-merge": "^4.1.2",
     "webpack-simple-progress-plugin": "^0.0.4"
   }
