--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -9,8 +9,9 @@
   "files": ["./*.js"],
   "scripts": {
     "watch": "rollup -c ../../tools/rollup/config.lib.js -w",
-    "build": "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
-    "test": "jest --config='../../jest.config.js'",
+    "build":
+      "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
+    "test": "jest -c '../../jest.config.js' --no-cache",
     "prepublishOnly": "npm run build"
   },
   "repository": {
