--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,7 +11,7 @@
     "watch": "rollup -c ../../tools/rollup/config.lib.js -w",
     "build":
       "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
-    "test": "jest --config='../../jest.config.js'",
+    "test": "jest -c '../../jest.config.js' --no-cache",
     "prepublishOnly": "npm run build"
   },
   "repository": {
