--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
@@ -43,6 +42,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
@@ -65,7 +65,6 @@
     "postcss-loader": "^2.1.4",
     "postcss-reporter": "^5.0.0",
     "prettier": "^1.12.1",
-    "prop-types": "^15.6.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
