--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "workspaces": [
       "packages/utils",
       "packages/native",
-      "packages/css-packs/*"
+      "packages/css-packs/*",
+      "packages/components/*"
     ]
   },
   "scripts": {
@@ -58,6 +59,7 @@
     "jest": "^22.4.3",
     "lint-staged": "^7.0.5",
     "mini-css-extract-plugin": "^0.4.0",
+    "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
@@ -79,13 +81,15 @@
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-scss": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.4",
+    "svelte": "^2.5.0",
+    "svelte-loader": "^2.9.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "validate-npm-package-name": "^3.0.0",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.2",
-    "webpack-merge": "^4.1.2",
-    "webpack-simple-progress-plugin": "^0.0.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   }
 }
