--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "bolt": {
     "workspaces": [
+      "website",
       "packages/utils",
       "packages/native",
       "packages/css-packs/*",
@@ -24,7 +25,6 @@
     "format:css": "prettier --loglevel silent --write 'packages/**/*.{css,scss}' && stylelint --fix 'packages/**/*.{css,scss}'",
     "test": "bolt ws test"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "7.0.0-beta.46",
@@ -67,6 +67,7 @@
     "postcss-loader": "^2.1.4",
     "postcss-reporter": "^5.0.0",
     "prettier": "^1.12.1",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
@@ -85,11 +86,13 @@
     "svelte-loader": "^2.9.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "validate-npm-package-name": "^3.0.0",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "svelte-routing": "^0.4.0"
   }
 }
