--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "build": "bolt ws build",
     "delete:modules": "rm -rf 'node_modules' './**/node_modules'",
     "lint": "npm run lint:js; npm run lint:css",
-    "lint:js": "eslint '*.js' 'tools/**/*.js' 'packages/**/*.js'",
+    "lint:js": "eslint '*.js' '{tools,packages,website}/**/*.{js,html,svelte}'",
     "lint:css": "stylelint 'packages/**/*.{css,scss}'",
     "format": "npm run format:css; npm run format:js",
-    "format:js": "prettier --loglevel silent --write '*.js' 'tools/**/*.js' 'packages/**/*.js' && eslint --fix '*.js' 'tools/**/*.js' 'packages/**/*.js'",
+    "format:js": "prettier --loglevel silent --write '*.js' '{tools,packages,website}/**/*.js' && eslint --fix '*.js' '{tools,packages,website}/**/*.{js,html,svelte}'",
     "format:css": "prettier --loglevel silent --write 'packages/**/*.{css,scss}' && stylelint --fix 'packages/**/*.{css,scss}'",
     "test": "bolt ws test"
   },
