--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,12 @@
     "value-list-comma-newline-after": null,
     "declaration-colon-newline-after": null,
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
+    "scss/at-rule-no-unknown": true,
+    "selector-pseudo-class-no-unknown": [true, {
+      "ignorePseudoClasses": ["global"]
+    }],
+    "selector-pseudo-element-no-unknown": [true, {
+      "ignorePseudoElements": ["global"]
+    }]
   }
 }
