--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-stage-3": "^7.0.0-beta.46",
+    "@gen/rollup-plugin-generate-html": "^0.1.1",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
@@ -71,10 +72,17 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
+    "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-filesize": "^1.5.0",
+    "rollup-plugin-fill-html": "^1.1.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-svelte": "^4.1.0",
+    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-virtual": "^1.0.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "stylelint": "^9.2.0",
