--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,21 +1,15 @@
 {
   "name": "@mamba/dialog",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/dialog.js",
   "style": "dist/style.css",
-  "source": "src/index.html",
-  "svelte": "src/index.html",
+  "source": "src/index.svelte",
+  "svelte": "src/index.svelte",
   "scripts": {
+    "start": "rollup -c \"../../../tools/rollup/config.component.js\" -w",
     "build":
-      "cross-env NODE_ENV=production webpack --config '../../../tools/webpack/config.component.js'",
+      "cross-env NODE_ENV=production rollup -c \"../../../tools/rollup/config.component.js\"",
     "build:dev":
-      "cross-env NODE_ENV=development webpack --config '../../../tools/webpack/config.component.js'",
-    "build:analyze":
-      "cross-env NODE_ENV=production webpack --config '../../../tools/webpack/config.analyzer.js'",
-    "watch":
-      "cross-env NODE_ENV=development webpack-dev-server --config '../../../tools/webpack/config.component.js'"
-  },
-  "author": "",
-  "license": "ISC"
+      "rollup -c \"../../../tools/rollup/config.component.js\""
+  }
 }
