Remove webpack. Make rollup copy static assets to dist folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "bolt": {
     "workspaces": [
-      "website",
       "packages/utils",
       "packages/native",
       "packages/css-packs/*",
@@ -15,7 +14,7 @@
     ]
   },
   "scripts": {
-    "start": "bolt w @mamba/website start",
+    "start": "cd website; npm run start; cd ..;",
     "build": "bolt ws build",
     "delete:modules": "rm -rf 'node_modules' './**/node_modules'",
     "lint": "npm run lint:js; npm run lint:css",
@@ -24,7 +23,8 @@
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --loglevel silent --write '*.js' '{tools,packages,website}/**/*.js' && eslint --fix '*.js' '{tools,packages,website}/**/*.{js,html,svelte}'",
     "format:css": "prettier --loglevel silent --write 'packages/**/*.{css,scss}' && stylelint --fix 'packages/**/*.{css,scss}'",
-    "test": "bolt ws test"
+    "test": "bolt ws test",
+    "postinstall": "cd website; yarn"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
@@ -37,14 +37,10 @@
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
-    "babel-loader": "^8.0.0-beta.0",
-    "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
@@ -52,55 +48,35 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "file-loader": "^1.1.11",
-    "glob": "^7.1.2",
     "globby": "^8.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "lint-staged": "^7.0.5",
-    "mini-css-extract-plugin": "^0.4.0",
-    "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "postcss-loader": "^2.1.4",
-    "postcss-reporter": "^5.0.0",
     "prettier": "^1.12.1",
-    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-filesize": "^1.5.0",
     "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-rebase": "^1.1.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-scss": "^3.1.0",
-    "stylelint-webpack-plugin": "^0.10.4",
-    "svelte": "^2.5.0",
-    "svelte-loader": "^2.9.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "svelte": "^2.5.0"
   },
-  "dependencies": {
-    "svelte-routing": "^0.4.0"
-  }
+  "dependencies": {}
 }
