--- a/website/package.json
+++ b/website/package.json
@@ -1,28 +1,13 @@
 {
-  "name": "@mamba/template-svelte",
-  "version": "6.0.0",
-  "description": "Ready-to-go Svelte starter project for Mamba Applications.",
-  "keywords": [
-    "svelte",
-    "boilerplate",
-    "webpack",
-    "mamba"
-  ],
+  "name": "mamba-website",
+  "version": "1.0.0.",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config tools/webpack/config.build.js",
-    "build:dev": "cross-env NODE_ENV=development webpack --config tools/webpack/config.build.js",
-    "build:analyze": "cross-env NODE_ENV=production webpack --config tools/webpack/config.analyzer.js",
-    "test": "jest --coverage",
-    "test:watch": "npm run -s test -- --watch",
-    "lint": "npm run lint:css; npm run lint:js",
-    "lint:js": "eslint *.js '{src,test,webpack}/**/*.{js,html,svelte}'",
-    "lint:css": "stylelint 'src/**/*.{css,sass,scss,sss,less}'",
-    "format": "npm run format:css; npm run format:js",
-    "format:js": "prettier --loglevel silent --write *.js '{src,test,webpack}/**/*.js' && eslint --fix *.js '{src,test,webpack}/**/*.{js,html,svelte}'",
-    "format:css": "prettier --loglevel silent --write 'src/**/*.{css,sass,scss,sss,less}' && stylelint --fix 'src/**/*.{css,sass,scss,sss,less}'"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/config.build.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config webpack/config.build.js",
+    "build:analyze": "cross-env NODE_ENV=production webpack --config webpack/config.analyzer.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
@@ -33,7 +18,6 @@
     "@babel/preset-stage-3": "^7.0.0-beta.46",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.19",
@@ -46,7 +30,6 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
@@ -55,7 +38,6 @@
     "html-minifier": "^3.5.15",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.0.5",
     "mini-css-extract-plugin": "^0.4.0",
