--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "bolt": {
     "workspaces": [
+      "website",
       "packages/utils",
       "packages/native",
       "packages/css-packs/*",
@@ -14,7 +15,7 @@
     ]
   },
   "scripts": {
-    "start": "cd website; npm run start; cd ..;",
+    "start": "bolt w @mamba/website start",
     "build": "bolt ws build",
     "delete:modules": "rm -rf 'node_modules' './**/node_modules'",
     "lint": "npm run lint:js; npm run lint:css",
@@ -23,24 +24,30 @@
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --loglevel silent --write '*.js' '{tools,packages,website}/**/*.js' && eslint --fix '*.js' '{tools,packages,website}/**/*.{js,html,svelte}'",
     "format:css": "prettier --loglevel silent --write 'packages/**/*.{css,scss}' && stylelint --fix 'packages/**/*.{css,scss}'",
-    "test": "bolt ws test",
-    "postinstall": "cd website; yarn"
+    "test": "bolt ws test"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.46",
     "@babel/node": "^7.0.0-beta.46",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-stage-3": "^7.0.0-beta.46",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
+    "babel-loader": "^8.0.0-beta",
+    "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
@@ -48,14 +55,24 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "file-loader": "^1.1.11",
     "globby": "^8.0.1",
+    "html-minifier": "^3.5.15",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "lint-staged": "^7.0.5",
+    "json-loader": "^0.5.7",
+    "lint-staged": "^7.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
+    "postcss-scss": "^1.0.5",
     "prettier": "^1.12.1",
+    "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
@@ -72,11 +89,22 @@
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-scss": "^3.1.0",
-    "svelte": "^2.5.0"
+    "stylelint-webpack-plugin": "^0.10.4",
+    "svelte": "^2.5.0",
+    "svelte-loader": "^2.9.0",
+    "svelte-routing": "^0.4.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {}
 }
