--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mamba-website",
+  "name": "@mamba/website",
+  "private": true,
   "version": "1.0.0.",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -13,13 +14,14 @@
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
     "@babel/node": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-stage-3": "^7.0.0-beta.46",
     "autoprefixer": "^8.4.1",
-    "babel-core": "^7.0.0-0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
-    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
@@ -39,12 +41,12 @@
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "json-loader": "^0.5.7",
-    "lint-staged": "^7.0.5",
+    "lint-staged": "^7.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "postcss-loader": "^2.1.4",
+    "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.5",
     "prettier": "^1.12.1",
     "raw-loader": "^0.5.1",
@@ -57,15 +59,14 @@
     "stylelint-webpack-plugin": "^0.10.4",
     "svelte-loader": "^2.9.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.7.0",
+    "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "phantomjs-function-bind-polyfill": "^1.0.0",
-    "svelte": "^2.4.4",
+    "svelte": "^2.5.0",
     "svelte-routing": "^0.4.0"
   }
 }
