--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mamba",
-  "version": "6.0.0",
-  "description": "Plain webpack 4 Boilerplate with Babel, SASS and lodash on board",
+  "name": "mamba-web",
+  "version": "1.0.0",
+  "description": "Web related Mamba libraries",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
@@ -39,7 +39,6 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
-    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
@@ -105,6 +104,5 @@
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
-  },
-  "dependencies": {}
+  }
 }
