--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,8 @@
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-stage-3": "^7.0.0-beta.46",
+    "@mamba/core-styles": "^0.0.1",
+    "@mamba/dialog": "^1.0.0",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
