--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-simple-progress-plugin": "^0.0.4"
   }
 }
