--- a/website/package.json
+++ b/website/package.json
@@ -61,7 +61,8 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-simple-progress-plugin": "^0.0.4"
   },
   "dependencies": {
     "svelte": "^2.5.0",
