--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -5,11 +5,12 @@
   "style": "dist/style.css",
   "source": "src/index.svelte",
   "svelte": "src/index.svelte",
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.js -w",
-    "build":
-      "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
+    "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
     "build:dev": "rollup -c ../../../tools/rollup/config.component.js",
     "prepublishOnly": "npm run build"
   }
