Add example app for @mamba/dialog

--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -13,5 +13,8 @@
     "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
     "build:dev": "rollup -c ../../../tools/rollup/config.component.js",
     "prepublishOnly": "npm run build"
+  },
+  "dependencies": {
+    "@mamba/styles-utils": "^0.0.1"
   }
 }
