--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -5,14 +5,15 @@
   "style": "dist/style.css",
   "source": "src/index.svelte",
   "svelte": "src/index.svelte",
-  "files": [
-    "dist/"
-  ],
+  "files": ["dist/", "src/"],
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.js -w",
     "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
     "build:dev": "rollup -c ../../../tools/rollup/config.component.js",
     "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@mamba/core-styles": "^0.0.1"
   },
   "dependencies": {
     "@mamba/styles-utils": "^0.0.1"
