--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -6,6 +6,8 @@
   "source": "src/index.svelte",
   "svelte": "src/index.svelte",
   "files": ["dist/", "src/"],
+  "author": "Stone Payments - Mamba Team",
+  "license": "Apache-2.0",
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.js -w",
     "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
