--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
     "clean-webpack-plugin": "^0.1.19",
