--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-stage-3": "^7.0.0-beta.46",
     "@mamba/core-styles": "^0.0.1",
     "@mamba/dialog": "^1.0.0",
+    "@mamba/styles-utils": "^0.0.1",
     "autoprefixer": "^8.4.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
