--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "description": "Collection of web utilities for Mamba Applications",
   "main": "utils.js",
-  "module": "utils.esm.js",
   "source": "src/index.js",
   "subModules": ["src/*/index.js"],
   "scripts": {
-    "watch": "rollup -c ../../tools/rollup/config.lib.js -w",
+    "start": "rollup -c ../../tools/rollup/config.lib.js -w",
     "build":
       "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
     "test": "exit 0; jest -c ../../jest.config.js --no-cache",
