--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -4,7 +4,7 @@
   "main": "dist/icon.js",
   "style": "dist/style.css",
   "source": "src/index.svelte",
-  "svelte": "src/index.svelte",
+  "svelte:component": "src/index.svelte",
   "files": ["dist/", "src/"],
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
