--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.5",
     "prettier": "^1.12.1",
+    "quickenv": "^0.0.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
