--- a/package.json
+++ b/package.json
@@ -5,15 +5,6 @@
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
-  "bolt": {
-    "workspaces": [
-      "packages/utils",
-      "packages/native",
-      "packages/css-packs/*",
-      "packages/components/*",
-      "website"
-    ]
-  },
   "scripts": {
     "start": "bolt w @mamba/website start",
     "build": "bolt ws build",
@@ -26,6 +17,32 @@
     "format:js": "prettier --loglevel silent --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,scss}\" && stylelint --fix \"packages/**/*.{css,scss,svelte,html}\"",
     "test": "bolt ws test"
+  },
+  "bolt": {
+    "workspaces": [
+      "packages/utils",
+      "packages/native",
+      "packages/css-packs/*",
+      "packages/components/*",
+      "website"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{scss,css}": [
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
@@ -73,7 +90,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.5",
     "prettier": "^1.12.1",
-    "quickenv": "^0.0.3",
+    "quickenv": "^0.0.5",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
@@ -94,7 +111,7 @@
     "rollup-plugin-virtual": "^1.0.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.2.0",
+    "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-scss": "^3.1.0",
