--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "dist/icon.js",
   "style": "dist/style.css",
-  "source": "src/index.svelte",
-  "svelte:component": "src/index.svelte",
+  "source": "src/index.js",
+  "svelte": "src/index.js",
   "files": ["dist/", "src/"],
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
