--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "bolt w @mamba/website start",
     "build": "bolt ws build",
     "build:components": "bolt ws build --only-fs \"packages/components/**\"",
+    "build:css": "bolt ws build --only-fs \"packages/css-packs/**\"",
+    "build:libs": "bolt ws build --only-fs \"packages/{utils,native}/**\"",
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "npm run lint:js; npm run lint:css",
