Add @mamba/cli package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "bolt": {
     "workspaces": [
+      "packages/cli",
       "packages/utils",
       "packages/native",
       "packages/css-packs/*",
