--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -5,7 +5,10 @@
   "style": "dist/style.css",
   "source": "src/index.js",
   "svelte": "src/index.js",
-  "files": ["dist/", "src/"],
+  "files": [
+    "dist/",
+    "src/"
+  ],
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "scripts": {
@@ -16,5 +19,8 @@
   },
   "devDependencies": {
     "@mamba/core-styles": "^0.0.1"
+  },
+  "dependencies": {
+    "svelte-routing": "^0.4.0"
   }
 }
