--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
-    "webpack-simple-progress-plugin": "^0.0.4"
+    "webpack-simple-progress-plugin": "^0.0.4",
+    "yargs": "^11.0.0"
   }
 }
