--- a/website/package.json
+++ b/website/package.json
@@ -5,27 +5,27 @@
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/config.dev.js",
+    "start": "webpack-dev-server --config webpack/config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/config.build.js",
-    "build:dev": "cross-env NODE_ENV=development webpack --config webpack/config.build.js",
+    "build:dev": "webpack --config webpack/config.build.js",
     "build:analyze": "cross-env NODE_ENV=production webpack --config webpack/config.analyzer.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/node": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-stage-3": "^7.0.0-beta.46",
-    "@mamba/core-styles": "^0.0.1",
-    "@mamba/dialog": "^1.0.0",
-    "@mamba/styles-utils": "^0.0.1",
-    "autoprefixer": "^8.4.1",
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/node": "^7.0.0-beta.47",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/preset-stage-3": "^7.0.0-beta.47",
+    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
+    "autoprefixer": "^8.5.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -33,21 +33,25 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
     "html-minifier": "^3.5.15",
+    "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.3",
     "json-loader": "^0.5.7",
+    "lint-staged": "^7.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-loader": "^2.1.5",
-    "postcss-scss": "^1.0.5",
     "prettier": "^1.12.1",
+    "quickenv": "^0.0.5",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
@@ -57,9 +61,10 @@
     "stylelint-scss": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.4",
     "svelte-loader": "^2.9.0",
+    "svelte-preprocess": "^2.0.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.12.0",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
@@ -67,6 +72,6 @@
   },
   "dependencies": {
     "svelte": "^2.6.3",
-    "svelte-routing": "^0.4.0"
+    "svelte-routing": "^0.4.2"
   }
 }
