Add better app information to cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
     "quickenv": "^0.0.5",
     "shelljs": "^0.8.2",
     "xml-js": "^1.6.3",
+    "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
   }
 }
