Make description an attr

--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -17,6 +17,9 @@
     "build:dev": "rollup -c ../../../tools/rollup/config.component.js",
     "prepublishOnly": "npm run build"
   },
+  "peerDependencies": {
+    "svelte-routing": "^0.4.2"
+  },
   "devDependencies": {
     "@mamba/core-styles": "^0.0.1"
   },
