--- a/website/package.json
+++ b/website/package.json
@@ -50,7 +50,13 @@
     "mini-html-webpack-plugin": "^0.2.3",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
+    "postcss-nested": "^3.0.0",
+    "postcss-reporter": "^5.0.0",
+    "postcss-url": "^7.3.2",
     "prettier": "^1.12.1",
     "quickenv": "^0.0.5",
     "raw-loader": "^0.5.1",
