--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -15,9 +15,11 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@mamba/core-styles": "^0.0.1"
+    "@mamba/core-styles": "^0.0.1",
+    "@mamba/sprite": "^1.0.0"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "@mamba/button": "^1.0.0",
     "@mamba/styles-utils": "^0.0.1"
   }
 }
