--- a/package.json
+++ b/package.json
@@ -145,5 +145,8 @@
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
+  },
+  "dependencies": {
+    "highlight.js": "^9.12.0"
   }
 }
