--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -18,7 +18,8 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@mamba/core-styles": "^0.0.1"
+    "@mamba/core-styles": "^0.0.1",
+    "@mamba/native": "^0.0.1"
   },
   "dependencies": {
     "svelte-routing": "^0.4.2"
