Add back button to appbar. Make icons clickable

--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -17,6 +17,10 @@
   "devDependencies": {
     "@mamba/core-styles": "^0.0.1"
   },
+  "peerDependencies": {
+    "svelte-routing": "^0.4.2",
+    "@mamba/icon": "^1.0.0"
+  },
   "dependencies": {
     "@mamba/styles-utils": "^0.0.1"
   }
