Refactor @mamba/store and include app lock

--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "svelte": "^2.7.0"
+    "svelte": "^2.7.0",
+    "@mamba/native": "^0.0.1"
   }
 }
