Move locked and shortcuts flag to store.__meta__

--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -19,5 +19,8 @@
   "peerDependencies": {
     "svelte": "^2.7.0",
     "@mamba/native": "^0.0.1"
+  },
+  "dependencies": {
+    "svelte-extras": "^2.0.2"
   }
 }
