--- a/package.json
+++ b/package.json
@@ -140,5 +140,8 @@
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
+  },
+  "dependencies": {
+    "svelte-extras": "^2.0.2"
   }
 }
