--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -8,17 +8,17 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "npm run build:pos && npm run build:desktop",
-    "build:pos": "node-sass --output-style=compressed --precision=3 ./pos.scss ./dist/pos.css",
-    "build:desktop": "node-sass --output-style=compressed --precision=3 ./desktop.scss ./dist/desktop.css",
+    "build:pos": "postcss ./pos.pcss -o ./dist/pos.css --verbose",
+    "build:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp src/assets dist/assets",
     "start": "npm run start:pos",
-    "start:pos": "node-sass -w ./pos.scss -o dist/pos.css",
-    "start:desktop": "node-sass -w ./desktop.scss -o dist/desktop.css",
+    "start:pos": "postcss ./pos.pcss -o ./dist/pos.css -w --verbose",
+    "start:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css -w --verbose",
     "test": "exit 0"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
-    "node-sass": "^4.9.0",
+    "postcss-cli": "^5.0.1",
     "rimraf": "^2.6.2"
   }
 }
