--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@babel/preset-stage-3": "^7.0.0-beta.47",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
-    "autoprefixer": "^8.5.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
@@ -96,7 +95,16 @@
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss": "^6.0.23",
+    "postcss-advanced-variables": "^2.3.3",
+    "postcss-atroot": "^0.1.3",
+    "postcss-cli": "^5.0.1",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-extend-rule": "^2.0.0",
     "postcss-loader": "^2.1.5",
+    "postcss-nested": "^3.0.0",
+    "postcss-preset-env": "^5.1.0",
+    "postcss-property-lookup": "^2.0.0",
     "prettier": "^1.12.1",
     "quickenv": "^0.0.5",
     "raw-loader": "^0.5.1",
@@ -128,7 +136,7 @@
     "stylelint-webpack-plugin": "^0.10.4",
     "svelte": "^2.7.0",
     "svelte-loader": "^2.9.0",
-    "svelte-preprocess": "^2.0.3",
+    "svelte-preprocess": "^2.1.3",
     "svelte-routing": "^0.4.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
