--- a/packages/components/Range/package.json
+++ b/packages/components/Range/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@mamba/range",
   "version": "1.0.0",
-  "main": "dist/range.js",
-  "style": "dist/style.css",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": ["dist/", "src/"],
@@ -10,9 +8,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
-    "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.build.js",
-    "build:dev": "rollup -c ../../../tools/rollup/config.component.build.js",
-    "prepublishOnly": "npm run build"
+    "build": "exit 0",
+    "build:dev": "exit 0"
   },
   "dependencies": {
     "@mamba/styles": "^0.0.1"
