Fix appbar example

--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -13,9 +13,8 @@
   },
   "peerDependencies": {
     "svelte-routing": "^0.4.2",
-    "@mamba/icon": "^1.0.0"
-  },
-  "dependencies": {
+    "@mamba/icon": "^1.0.0",
+    "@mamba/store": "^0.0.1",
     "@mamba/styles": "^0.0.1"
   }
 }
