Remove lint:css... for now

--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "build:libs": "bolt ws build --only-fs \"packages/{utils,native}/**\"",
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
-    "lint": "npm run lint:js; npm run lint:css",
+    "lint": "npm run lint:js",
     "lint:js": "eslint \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
-    "lint:css": "stylelint \"packages/**/*.{css,pcss,svelte,html}\"",
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --loglevel silent --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{css,pcss}\"",
