--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "cross-env": "^5.1.5",
+    "css-loader": "^0.28.11",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -88,21 +89,21 @@
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss": "^6.0.23",
     "postcss-advanced-variables": "^2.3.3",
+    "postcss-atroot": "^0.1.3",
+    "postcss-cli": "^5.0.1",
     "postcss-easy-import": "^3.0.0",
+    "postcss-extend-rule": "^2.0.0",
+    "postcss-html": "^0.30.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-nested": "^3.0.0",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.3.2",
-    "postcss": "^6.0.23",
-    "postcss-atroot": "^0.1.3",
-    "postcss-cli": "^5.0.1",
-    "postcss-extend-rule": "^2.0.0",
-    "postcss-html": "^0.30.0",
     "postcss-preset-env": "^5.1.0",
     "postcss-property-lookup": "^2.0.0",
+    "postcss-reporter": "^5.0.0",
     "postcss-syntax": "^0.30.0",
+    "postcss-url": "^7.3.2",
     "prettier": "^1.12.1",
     "quickenv": "^0.0.5",
     "rimraf": "^2.6.2",
@@ -123,15 +124,17 @@
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
     "shelljs": "^0.8.2",
+    "style-loader": "^0.21.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-webpack-plugin": "^0.10.5",
     "svelte": "^2.8.0",
+    "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^2.1.4",
-    "svelte-extras": "^2.0.2",
     "svelte-routing": "^0.4.2",
+    "webpack": "^4.14.0",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
